Revert "fix alignment (#627)"
This reverts commit 4bf77904b154c27f03d2720ac536f507878a8266.

--- a/creativecloud/blocks/cc-forms/cc-forms.css
+++ b/creativecloud/blocks/cc-forms/cc-forms.css
@@ -213,8 +213,7 @@
   block-size: 10px;
   inline-size: 10px;
   inset: 0;
-  top: 2px;
-  left: 2px;
+  margin: auto;
   scale: 0;
   opacity: 0;
   transition: scale 0.13s ease-in-out, opacity 0.13s;
